# writng_app

./: README.md  app.py  pyproject.toml
common/: utils.py
main/: __init__.py  routes.py
main/static/: main.js
main/templates/: main.html
report/: __init__.py  routes.py
report/templates/: feedback.html  speaking_report.html  writing_report.html
speaking/: __init__.py  routes.py
speaking/templates/: writing_form.html
static/: exam_data.json  script.js
templates/: base.html  writing_form.html
writing/: __init__.py  routes.py
writing/static/: script.js  speaking.js  writing.js
writing/templates/: speaking_form.html  writing_form.html
