[tool.poetry]
name = "writng-app"
version = "0.1.0"
description = ""
authors = ["Kurisu Naotsugu <kurikurikurusu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
google = "^3.0.0"
google-genai = "^1.30.0"
weasyprint = "^66.0"
gunicorn= "23.0.0"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
