[tool.poetry]
name = "writng-app"
version = "0.1.0"
description = ""
authors = ["Kurisu Naotsugu <kurikurikurusu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "1.25.2"
torch = "2.2.2"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
flask = "^3.1.2"
google = "^3.0.0"
google-genai = "^1.47.0"
weasyprint = "^66.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
